# projets

./: README.md
application_flashcard/: README.md  app_flashcard.py
downloader_youtube/: README.md  downloader_youtube.py
embedded-system/component_buzzer_passive/: CMakeLists.txt
embedded-system/component_buzzer_passive/components/dht22/: CMakeLists.txt  buzzer_passive.c
embedded-system/component_buzzer_passive/components/dht22/include/: buzzer_passive.h  hedwig_theme.h
embedded-system/component_buzzer_passive/main/: main.c
embedded-system/component_dht22/: CMakeLists.txt
embedded-system/component_dht22/components/dht22/: CMakeLists.txt  dht22.c
embedded-system/component_dht22/components/dht22/include/: dht22.h
embedded-system/component_dht22/main/: main.c
pavage_diamant/: main.py  pavage_diamant_azteque.py
sudoku/: .gitignore  Makefile
sudoku/report/: Makefile
sudoku/src/: Makefile  sudoku.c  sudoku.h
sudoku/test/: colors_tests.c  grid_tests.c
takuzu/: .clang-format  4x4_1.txt  CMakeLists.txt  README.md  game.c  game.h  game_aux.c  game_aux.h  game_ext.h  game_sdl.c  game_solve.c  game_test_aupasquet.c  game_test_emtexier.c  game_test_tvieiradoval.c  game_text.c  game_tools.c  game_tools.h  main.c  model.c  queue.c
takuzu/web/: Makefile  game.html  game.js  game.wasm  wrapper.c
takuzu/web/src/: game.c  game.h  game_aux.c  game_aux.h  game_ext.h  game_tools.c  game_tools.h  queue.c  queue.h
ubomb/: README.odt
ubomb/src/main/java/fr/ubx/poo/ubomb/: Graph.java  Node.java  Pair.java
ubomb/src/main/java/fr/ubx/poo/ubomb/engine/: GameEngine.java  Input.java  StatusBar.java  Timer.java
ubomb/src/main/java/fr/ubx/poo/ubomb/game/: Configuration.java  Game.java  Grid.java  Level.java  Position.java
ubomb/src/main/java/fr/ubx/poo/ubomb/go/: Bomb.java  GameObject.java  Walkable.java
ubomb/src/main/java/fr/ubx/poo/ubomb/go/character/: Character.java  Monster.java  Player.java
ubomb/src/main/java/fr/ubx/poo/ubomb/go/decor/: Decor.java  Door.java  DoorNextClosed.java  DoorNextOpened.java  DoorPrevOpened.java  Princess.java
ubomb/src/main/java/fr/ubx/poo/ubomb/go/decor/bonus/: BombNumberDec.java  BombNumberInc.java  BombRangeDec.java  BombRangeInc.java  Bonus.java  Box.java  Heart.java  Key.java
ubomb/src/main/java/fr/ubx/poo/ubomb/launcher/: Entity.java  GameLauncher.java  MapLevel.java  MapLevelDefault.java
ubomb/src/main/java/fr/ubx/poo/ubomb/view/: GameLauncherView.java  ImageResourceFactory.java  Sprite.java  SpriteBombs.java  SpriteFactory.java  SpriteMonster.java  SpritePlayer.java
